Do not change the sorting among resources in the default backend

It would make us swap them unnecessarily, breaking the already curated
sorting.

BUG: 451667


(cherry picked from commit 7b7a9a17a3d3487191f53419f97dbace120ca165)